--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/hornung/dev/45plus/microservices/email-service/.env/bin/python3.7"
+    "python.pythonPath": "/usr/bin/python3.8"
 }
